# mla-dashboard

./: .gitignore  HANDOFF.md  Launch Dashboard.vbs  README.md  Refresh Data (Full Backfill).bat  Refresh Data.vbs  app.py  probe_mla_reports.py  pyproject.toml  requirements.txt  run_dashboard.bat
.github/workflows/: refresh.yml
data-manual/: Imported 90CL Price - Historical.xlsx
data/parquet/: exports.parquet  fx_rates.parquet  global_cattle_prices.parquet  indicators.parquet  lean_beef_prices.parquet  nlrs_slaughter.parquet  ref_indicator.parquet  ref_saleyard.parquet  slaughter_production.parquet  yardings.parquet
scripts/: backfill.py
src/mla_dashboard/: __init__.py  analysis.py  client.py  config.py  db.py  ingest_mla.py  refresh.py
