[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mla-dashboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "plotly>=5.18",
    "streamlit>=1.32",
    "tenacity>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]
